# Jarvis

./: .gitignore  LICENSE  NOTICE  Package.swift  README.md
brain/: pyproject.toml  run_brain.py
brain/app/: __init__.py  _build_constants.py  atoll_bridge.py  build_info.py  chat_service.py  chatterbox_worker.py  f5_tts_worker.py  main.py  memory_service.py  provider_manager.py  runtime_secrets.py  schemas.py  security.py  spotify_service.py  standalone.py  tts_service.py  web_search.py
brain/app/core/: __init__.py  assistant_response_composer.py  model_catalog.json  model_catalog.py  model_router.py  performance.py  prompts.py  scheduled_agents.py  service_container.py  tracing.py
brain/app/core/apple_bridge/: __init__.py  areas.py
brain/app/core/capabilities/: __init__.py  capability.py  loader.py  prompt.py  registry.py
brain/app/core/catalog/: __init__.py  generator.py  (+6 more)
brain/app/dictation/: __init__.py  cleanup.py  formatter.py  service.py
brain/app/file_index/: __init__.py  service.py
brain/app/prompts/: assistant.md  command_interpretation.md  conversational_repair.md  dictation.md  document_editing.md  email.md  skill_execution.md  skill_learning.md
brain/app/routes/: atoll.py  calendar.py  capabilities.py  chat.py  connectors.py  deps.py  dictation.py  email.py  files.py  memory.py  messages.py  modes.py  providers.py  runtime.py  scheduled_agents.py  settings.py  skills.py  spotify.py  tts.py  web.py  whatsapp.py
brain/jarvis_brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brain/tests/: test_brain.py  test_build_info.py  test_catalog.py
(+142 files in other folders)
