[project]
name = "jarvis-brain"
version = "0.1.0"
description = "Local FastAPI brain for JarvisNotch"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "mem0ai>=0.1.100",
  "chromadb>=0.5.0",
  "openai>=1.0",
  "anthropic>=0.40",
  "google-genai>=1.0",
  "kokoro-onnx>=0.5.0",
  "soundfile>=0.12",
  "pytest>=8.0"
]

[project.optional-dependencies]
f5-tts = [
  # F5-TTS runs in brain/.venv-f5-tts so its heavy torch/audio stack stays
  # isolated from the lightweight FastAPI brain and Kokoro dependencies.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
